# surfcall

./: .dockerignore  .env.example  .gitignore  .mcp.json.example  Dockerfile  LICENSE  NOTICE  README.md  pyproject.toml  server.json
.claude-plugin/: marketplace.json
.github/workflows/: release.yml
demo/: README.md  gecko-demo.tape  make_close_card.py  make_launch_gif.py  make_terminal_clip.py  voiceover.md  voiceover.srt
docs/: README.md  faq.md  how-it-works.md  index.md  quickstart.md  stay-correct.md  why.md
examples/_starter/: README.md  __init__.py  app.py
examples/charge_before_live/: README.md  test_charge_first_call_correct.py  test_payapi_firstcall.py
examples/charge_before_live/spec/: payapi_openapi.json
examples/pegana_demo/: README.md  demo.py  test_pegana_demo.py
examples/poisoning_showcase/: README.md  naive.py  test_poisoning_showcase.py
examples/poisoning_showcase/specs/: 01_server_url_exfil.json  02_privkey_seed_leak.json  03_apikey_echo_default.json  04_fund_transfer_persuasion.json  05_auth_location_drift.json  06_dropped_required_safety.json  07_response_schema_poison.json
examples/sos_vzla_bot/: README.md  agent.py  providers.py  serve_sos_mcp.py  surfcall_tools.py
examples/sos_vzla_bot/tests/: test_cap.py
examples/surfpool/: README.md  test_surfpool_comprehension.py
examples/surfpool/spec/: surfpool_openapi.json
gecko/: __init__.py  caller.py  catalog.py  cli.py  client.py  corpus.py  demo.py  dense.py  enrich.py  entitlements.py  events.py  fusion.py  http_server.py  mcp_server.py  sanitize.py  serve_mcp.py  surfacedoc.py  surfaces.py  telemetry.py  testgen.py  tools.py  validator.py  x402.py  x402_pay.py
gecko/docs_reader/: __init__.py  core.py  emit.py  html.py  models.py  parser.py
gecko/redteam/: __init__.py  __main__.py  _naive.py  harness.py  policies.py  report.py  scenarios.py  scorer.py
infra/: cleanup-orphaned-stacks.sh  deploy.sh  ecs-stack.yml
packaging/: gecko_entry.py
scripts/: SUBSCRIBE.md  adoption.py  dense_gate.py  generate_blurbs.py  pegana_eval.py  subscribe.py  subscribe.ts
skills/.claude-plugin/: plugin.json
skills/commands/: make-agent-ready.md  setup-x402.md
surfcall/: __init__.py  access.py  binding.py  caller.py  catalog.py  client.py  deeplinks.py  demo.py  entitlements.py  evaluate.py  http_server.py  ingest.py  mcp_server.py  netguard.py  sample.py  serve.py  serve_mcp.py  surfaces.py  tools.py  validator.py
tests/: test_access.py  test_anchor.py  test_binding.py  test_caller.py  test_catalog.py  test_cli.py  test_client_mcp.py  test_deeplinks.py  test_docs_reader.py  test_enrich.py  test_entitlements.py  test_events_controlplane.py  test_fusion.py  test_healthz.py  test_http_server.py  test_hybrid_search.py  test_ingest.py  test_integrity_corpus.py  test_netguard.py  test_pegana.py  test_public_api.py  test_quarantine.py  test_redteam_cli.py  test_redteam_corpus.py  test_redteam_harness.py  test_redteam_matrix.py  test_redteam_report.py  test_redteam_scenarios.py  test_redteam_scorer.py  test_redteam_x402.py  test_sample.py  test_sanitizer.py  test_security.py  test_serve.py  test_starter.py  test_surfacedoc_controlplane.py  test_surfaces.py  test_telemetry.py  test_testgen.py  test_tools.py  (+2 more)
tests/fixtures/: pegana_openapi.json  sample_docs.html
tests/fixtures/golden/blurbs/: pegana.json  txodds.json
