[project]
name = "surfcall"
version = "0.1.0"
description = "Make any API agent-usable without integration code. V1: comprehension layer — turn a human-shaped OpenAPI surface into question-shaped, first-call-correct agent tools. (Working name; rename on brand pick.)"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
serve = [
    "mcp[cli]>=1.28.1",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=8.0",
    "ruff>=0.15.20",
    "types-pyyaml>=6.0.12.20260518",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"

# The serve transport (mcp/starlette/uvicorn) is an OPTIONAL extra. Keep mypy clean
# whether or not it is installed — the engine itself stays dep-light.
[[tool.mypy.overrides]]
module = ["mcp.*", "starlette.*", "uvicorn", "uvicorn.*"]
ignore_missing_imports = true
