[project]
name = "surfcall"
version = "0.1.0"
description = "Make any API agent-usable without integration code. V1: comprehension layer — turn a human-shaped OpenAPI surface into question-shaped, first-call-correct agent tools. (Working name; rename on brand pick.)"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0"]

# `uvx surfcall serve <openapi-url>` / `python -m surfcall.serve`. Thin CLI; the
# entry only parses args + formats output (real logic lives in the package).
[project.scripts]
surfcall = "surfcall.serve:_run"

[project.optional-dependencies]
serve = [
    "mcp[cli]>=1.28.1",
    "uvicorn>=0.49.0",
]
# The SOS Venezuela Telegram bot example (examples/sos_vzla_bot). Needed only to
# RUN the bot live; the recorded test path needs only the engine (Pattern B).
sosbot = [
    "anthropic>=0.40",
    "openai>=1.40",
    "python-telegram-bot>=21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["surfcall"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=8.0",
    "ruff>=0.15.20",
    "types-pyyaml>=6.0.12.20260518",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"

# The serve transport (mcp/starlette/uvicorn) and the sosbot example
# (anthropic/telegram) are OPTIONAL extras. Keep mypy clean whether or not they are
# installed — the engine itself stays dep-light.
[[tool.mypy.overrides]]
module = ["mcp.*", "starlette.*", "uvicorn", "uvicorn.*", "anthropic.*", "telegram.*", "openai.*"]
ignore_missing_imports = true
