[project]
name = "gecko-surf"
version = "0.1.1"
description = "Make any API agent-usable without integration code. V1: comprehension layer — turn a human-shaped OpenAPI surface into question-shaped, first-call-correct agent tools. (Working name; rename on brand pick.)"
# README becomes the PyPI long-description; it carries the `mcp-name:` marker the
# MCP Registry matches to prove PyPI ownership. Without this, the description is empty.
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = ["pyyaml>=6.0"]

# `uvx gecko ...` (dist: gecko-surf). Thin subcommand dispatcher (serve/test/
# from-docs); a bare `gecko <spec>` still serves. `python -m gecko.serve` also works
# unchanged. The entry only parses args + formats output (logic lives in the package).
[project.scripts]
gecko = "gecko.cli:_run"
gecko-testgen = "gecko.testgen:_run"
# Off-chain battle-test: run the 12 packaged scenarios, gate on the scorecard (exit 0
# iff money_trusted). Deterministic $0 CI lane; `python -m gecko.redteam` works too.
gecko-redteam = "gecko.redteam.__main__:_run"
# Read-only local usage aggregate for a corpus JSONL (no network). Opt-out
# telemetry's inspection face; phone-home stays opt-in/disabled in gecko.telemetry.
gecko-telemetry = "gecko.telemetry:_run"

[project.optional-dependencies]
serve = [
    "mcp[cli]>=1.28.1",
    "uvicorn>=0.49.0",
]
# Usage-event sink (gecko.events -> gecko_events.surf_events). Optional: absent =>
# gecko.events is a no-op, so a plain OSS install never needs it and never phones
# home. Only our hosted surface (which sets MONGODB_URI) installs this extra.
events = [
    "pymongo>=4.9",
]
# The SOS Venezuela Telegram bot example (examples/sos_vzla_bot). Needed only to
# RUN the bot live; the recorded test path needs only the engine (Pattern B).
sosbot = [
    "anthropic>=0.40",
    "openai>=1.40",
    "python-telegram-bot>=21",
]
# The dense retrieval arm (V2): MongoDB Atlas $vectorSearch (native Voyage autoEmbed)
# + Haiku enrichment. OPTIONAL — the core engine stays dep-light (pyyaml only). The
# provider SDKs live BEHIND injected seams (Enricher/DenseIndex); catalog.py never
# imports them (invariant #2). Pinned blurbs make enrichment a committed-data step,
# so an offline run needs neither key.
dense = [
    "pymongo>=4.10",
    "certifi>=2024.0",
    "anthropic>=0.40",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gecko"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=8.0",
    "ruff>=0.15.20",
    "types-pyyaml>=6.0.12.20260518",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"

# The serve transport (mcp/starlette/uvicorn), the sosbot example (anthropic/telegram),
# and the non-CI red-team LLM lane (gecko.redteam.llm) are OPTIONAL. Keep mypy clean
# whether or not they are present — the engine itself stays dep-light.
[[tool.mypy.overrides]]
module = ["mcp.*", "starlette.*", "uvicorn", "uvicorn.*", "anthropic.*", "telegram.*", "openai.*", "pymongo", "pymongo.*", "gecko.redteam.llm"]
ignore_missing_imports = true
